Downgraded to openjdk-11